# iges_step

./: .gitignore  README.md  TubeCutCalculator.spec  app_build.py  app_info.py  build_exe.bat  environment.yml  main.py  pyproject.toml  requirements.txt  version.txt
.codex-patches/: v0410.patch.gz.b64.part00  v0410.patch.gz.b64.part01  v0410.patch.gz.b64.part02  v0410.patch.gz.b64.part03  v0410.patch.gz.b64.part04  v0410.patch.gz.b64.part05  v0410.patch.gz.b64.part06  v0410.patch.gz.b64.part07  v0412.patch.gz.b64.part00  v0412.patch.gz.b64.part01  v047.patch.gz.b64.part00  v047.patch.gz.b64.part01  v047.patch.gz.b64.part02  v047.patch.gz.b64.part03  v048.patch.gz.b64.part00  v048.patch.gz.b64.part01  v048.patch.gz.b64.part02  v048.patch.gz.b64.part03  v050.patch.gz.b64.partaa  v050.patch.gz.b64.partab  v050.patch.gz.b64.partac  v050.patch.gz.b64.partad  v050.patch.gz.b64.partae  v050.patch.gz.b64.partaf
cad/: __init__.py  analyzer.py  cut_length_calculator.py  debug_edges.py  debug_faces.py  dxf_reader.py  edge_classifier.py  importer.py  inventor_converter.py  isometry_renderer.py  outer_contour_patch.py  perimeter_calculator.py  pierce_counter.py  profile_detector.py  rounded_profile_detector.py  shape_summary.py  sheet_analyzer.py  step_text_analyzer.py  supported_formats.py  thickness_detector.py  unfolder.py
core/: __init__.py  dev_reloader.py  file_job.py  file_queue.py  specification_importer.py
export/: csv_exporter.py  excel_exporter.py  json_project.py  pdf_commercial_offer.py  pdf_exporter.py  pdf_technical_report.py  print_manager.py  report_html.py  (+1 more)
(+55 files in other folders)
