[project]
name = "tube-cut-calculator"
version = "0.4.7"
description = "Windows GUI for laser tube cutting workflow with STEP/IGES import and 3D preview."
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.9,<7",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.14,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
