[project]
name = "tube-cut-calculator"
version = "0.5.4"
description = "Windows GUI calculator for laser tube cutting, sheet DXF contours, nesting, pricing, tube purchase, reports, and STEP/IGES preview."
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.9,<7",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.14,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
